# bot-nerdisticos

./: README.md  pyproject.toml
bot_nerdisticos/: main.py
