[tool.poetry]
name = "bot-nerdisticos"
version = "1.0.0"
description = ""
authors = ["Joaquim Madureira <joaquimmadureira@protonmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
discord = "^2.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
